Configure Netlify deployment: netlify.toml, serverless API, and markdown fixes

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^9.1.2",
     "nodemon": "^3.1.11",
     "openai": "^6.15.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "serverless-http": "^4.0.0"
   }
 }
