--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -15,8 +15,10 @@
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
     "@reduxjs/toolkit": "^2.11.2",
+    "@supabase/supabase-js": "^2.90.1",
     "axios": "^1.13.2",
     "expo": "~54.0.31",
+    "expo-document-picker": "~14.0.8",
     "expo-image-picker": "~17.0.10",
     "expo-status-bar": "~3.0.9",
     "firebase": "^12.7.0",
